[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/menu_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound_effects/menu_up.wav" type="AudioStream" id=4]
[ext_resource path="res://sound_effects/menu_down.wav" type="AudioStream" id=5]

[node name="SettingsMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 75
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 75.0
margin_right = 323.0
margin_bottom = 576.0
size_flags_horizontal = 0
alignment = 1

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 248.0
margin_bottom = 249.0

[node name="Label" parent="VBoxContainer/MusicContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 111.0
margin_bottom = 33.0
toggle_mode = true
text = "Music"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
margin_left = 115.0
margin_right = 215.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../SFXContainer/HSlider")
value = 100.0
editable = false
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldTimer" type="Timer" parent="VBoxContainer/MusicContainer"]
wait_time = 0.4
one_shot = true

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 253.0
margin_right = 248.0
margin_bottom = 286.0

[node name="Label" parent="VBoxContainer/SFXContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 66.0
margin_bottom = 33.0
toggle_mode = true
text = "SFX"

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../MusicContainer/HSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../FullscreenContainer/Button")
value = 100.0
editable = false
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldTimer" type="Timer" parent="VBoxContainer/SFXContainer"]
wait_time = 0.4
one_shot = true

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 248.0
margin_bottom = 323.0

[node name="Button" parent="VBoxContainer/FullscreenContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 220.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../../SFXContainer/HSlider")
focus_neighbour_bottom = NodePath("../../BackButton")
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
margin_left = 224.0
margin_right = 248.0
margin_bottom = 33.0
focus_mode = 0
enabled_focus_mode = 0

[node name="ScreenshakeContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 308.0
margin_right = 271.0
margin_bottom = 341.0

[node name="Button" parent="VBoxContainer/ScreenshakeContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 243.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../../FullscreenContainer/Button")
focus_neighbour_bottom = NodePath("../../BackButton")
text = "Screenshake"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/ScreenshakeContainer"]
margin_left = 247.0
margin_right = 271.0
margin_bottom = 33.0
focus_mode = 0
enabled_focus_mode = 0

[node name="BackButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 327.0
margin_right = 248.0
margin_bottom = 360.0
focus_neighbour_top = NodePath("../FullscreenContainer/Button")
text = "Back"

[node name="AcceptSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
[connection signal="focus_entered" from="VBoxContainer/MusicContainer/HSlider" to="." method="_on_Music_HSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/MusicContainer/HSlider" to="." method="_on_Music_HSlider_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/MusicContainer/HSlider" to="." method="_on_Music_HSlider_gui_input"]
[connection signal="timeout" from="VBoxContainer/MusicContainer/HoldTimer" to="." method="_on_Music_HoldTimer_timeout"]
[connection signal="focus_entered" from="VBoxContainer/SFXContainer/HSlider" to="." method="_on_SFX_HSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/SFXContainer/HSlider" to="." method="_on_SFX_HSlider_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/SFXContainer/HSlider" to="." method="_on_SFX_HSlider_gui_input"]
[connection signal="timeout" from="VBoxContainer/SFXContainer/HoldTimer" to="." method="_on_SFX_HoldTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/FullscreenContainer/Button" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenContainer/CheckBox" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreenshakeContainer/Button" to="." method="_on_Screenshake_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
